src/test/ui/type-alias-impl-trait/issue-84660-unsoundness.stderr
error: cannot implement trait on type alias impl trait
  --> $DIR/issue-84660-unsoundness.rs:16:21
   |
LL | impl<In, Out> Trait<Bar, In> for Out {
   |                     ^^^
   |
note: type alias impl trait defined here
  --> $DIR/issue-84660-unsoundness.rs:8:12
   |
LL | type Bar = impl Foo;
   |            ^^^^^^^^

error: aborting due to previous error

